force-app/main/default/objects/DM_Production__c/fields/DM_Production_Type_Inputs__c.field-meta.xml
<CustomField>
    <fullName>DM_Production_Type_Inputs__c</fullName>
    <label>Production Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
                <label>Applied to a field</label>
            </value>
            <value>
                <fullName>Production Site</fullName>
                <label>Applied to a nursery or greenhouse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>