force-app/main/default/objects/DM_Production__c/fields/DM_Quantity_Applied__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_Applied__c</fullName>
    <inlineHelpText>When an input material is used, it may be mixed or diluted to result in a different quantity applied. For instance, 1 gallon of concentrated pesticide may be diluted to 50 gallons of applied pesticide.</inlineHelpText>
    <label>Quantity Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>