force-app/main/default/objects/DM_Production__c/fields/DM_Quantity_of_Material_Used__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_of_Material_Used__c</fullName>
    <label>Quantity of Material Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>