force-app/main/default/objects/DM_Production__c/fields/DM_Quantity_Planted__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_Planted__c</fullName>
    <label>Quantity Planted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>