force-app/main/default/objects/DM_Production__c/fields/DM_Reason_Applied__c.field-meta.xml
<CustomField>
    <fullName>DM_Reason_Applied__c</fullName>
    <label>Reason Applied</label>
    <type>TextArea</type>
</CustomField>