force-app/main/default/objects/DM_Production__c/fields/DM_Related_Planting__c.field-meta.xml
<CustomField>
    <fullName>DM_Related_Planting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Planting</label>
    <referenceTo>DM_Production__c</referenceTo>
    <relationshipLabel>Production</relationshipLabel>
    <relationshipName>Production</relationshipName>
    <type>Lookup</type>
</CustomField>