force-app/main/default/objects/DM_Production__c/fields/DM_Related_Season__c.field-meta.xml
<CustomField>
    <fullName>DM_Related_Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Rotation Plan Season</label>
    <referenceTo>DM_Season__c</referenceTo>
    <relationshipLabel>Production</relationshipLabel>
    <relationshipName>Production</relationshipName>
    <type>Lookup</type>
</CustomField>