force-app/main/default/objects/DM_Production__c/fields/DM_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>DM_Storage_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DM_Storage__c.DM_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DM_Storage__c</referenceTo>
    <relationshipLabel>Production</relationshipLabel>
    <relationshipName>Production</relationshipName>
    <type>Lookup</type>
</CustomField>