force-app/main/default/objects/DM_Production__c/fields/DM_Total_Area_Applied_Acres__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Area_Applied_Acres__c</fullName>
    <label>Total Area Applied (Acres)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>