force-app/main/default/objects/DM_Production__c/fields/DM_Total_Area_Planted_Sq_Feet__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Area_Planted_Sq_Feet__c</fullName>
    <label>Total Area Planted (Sq. Feet)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>