force-app/main/default/objects/DM_Production__c/fields/DM_Total_Cost_of_Production_Prod__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Cost_of_Production_Prod__c</fullName>
    <formula>DM_Cost_of_Inputs__c + DM_Cost_of_Labor__c + DM_Cost_of_Material_Production__c + DM_Cost_of_Supplies__c + DM_Cost_of_Water__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost of Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>