force-app/main/default/objects/DM_Production__c/fields/DM_Total_Unit_Cost_of_Production_Vendor__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Unit_Cost_of_Production_Vendor__c</fullName>
    <formula>DM_Total_Cost_of_Production_Vendor__c /  DM_Actual_Yield__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Cost of Production</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>