force-app/main/default/objects/DM_Production__c/fields/DM_Turning_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DM_Turning_Frequency__c</fullName>
    <label>Turning Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>As Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>