force-app/main/default/objects/DM_Production__c/fields/DM_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>DM_Unit_of_Measure__c</fullName>
    <formula>CASE( DM_Material_Source__c , 
&quot;Inventory&quot;, TEXT( DM_Material__r.DM_Quantity_Unit_of_Measure__c), 
&quot;Production Site&quot;,  text(DM_On_Premises_Production__r.DM_Yield_Unit_of_Measure__c) ,
&quot;Not Found&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit of Measure</label>
    <type>Text</type>
</CustomField>