force-app/main/default/objects/DM_Production__c/fields/DM_Weed_Control_Methods__c.field-meta.xml
<CustomField>
    <fullName>DM_Weed_Control_Methods__c</fullName>
    <label>Weed Control Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mulching</fullName>
            </value>
            <value>
                <fullName>Flame Weeding</fullName>
            </value>
            <value>
                <fullName>Hand Weeding &amp; Hoeing</fullName>
            </value>
            <value>
                <fullName>Grazing Animals</fullName>
            </value>
            <value>
                <fullName>Vinegar &amp; Natural Herbicides</fullName>
            </value>
            <value>
                <fullName>Cover Cropping</fullName>
                <isActive>false</isActive>
                <label>Cover Cropping</label>
            </value>
            <value>
                <fullName>Crop Rotation</fullName>
                <isActive>false</isActive>
                <label>Crop Rotation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>