force-app/main/default/objects/DM_Production__c/fields/DM_Yield_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>DM_Yield_Unit_of_Measure__c</fullName>
    <label>Yield Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pounds</fullName>
            </value>
            <value>
                <fullName>Kilograms</fullName>
            </value>
            <value>
                <fullName>Bushels</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Tons</fullName>
                <isActive>false</isActive>
                <label>Tons</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>