force-app/main/default/objects/DM_Production__c/recordTypes/DM_Cash_Crops.recordType-meta.xml
<RecordType>
    <fullName>DM_Cash_Crops</fullName>
    <active>true</active>
    <description>Record planting and harvest dates, yield, and sales</description>
    <label>Cash Crops</label>
</RecordType>