force-app/main/default/objects/DM_Production__c/recordTypes/DM_Cover_Crops.recordType-meta.xml
<RecordType>
    <fullName>DM_Cover_Crops</fullName>
    <active>true</active>
    <description>Record crop acreage and location</description>
    <label>Cover Crops</label>
</RecordType>