force-app/main/default/objects/DM_Production__c/recordTypes/DM_Inputs.recordType-meta.xml
<RecordType>
    <fullName>DM_Inputs</fullName>
    <active>true</active>
    <description>Record materials applied to a field (fertilizer, pesticide, compost)</description>
    <label>Inputs</label>
</RecordType>