force-app/main/default/objects/DM_Production__c/recordTypes/DM_On_Premises_Production.recordType-meta.xml
<RecordType>
    <fullName>DM_On_Premises_Production</fullName>
    <active>true</active>
    <description>Record production activities supporting operations such as making compost, cleaning equipment, and packing.</description>
    <label>On Premises Production</label>
</RecordType>