force-app/main/default/objects/DM_Production__c/validationRules/Field_or_Production_Site.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_or_Production_Site</fullName>
    <active>true</active>
    <description>A Field or Production Site must be selected.</description>
    <errorConditionFormula>ISNULL( DM_Field__r.Id) &amp;&amp;
 ISNULL( DM_Production_Site__r.Id )</errorConditionFormula>
    <errorMessage>A Field or a Production Site is required.</errorMessage>
</ValidationRule>