force-app/main/default/objects/DM_Production__c/validationRules/Production_Complete_no_new_Harvest.validationRule-meta.xml
<ValidationRule>
    <fullName>Production_Complete_no_new_Harvest</fullName>
    <active>true</active>
    <description>Crop Stage is Production Complete therefore, no additional Harvest records can be created.</description>
    <errorConditionFormula>ISPICKVAL( DM_Crop_Stage__c , &quot;Production Complete&quot;) &amp;&amp;
ISCHANGED( DM_Harvest_Count__c )</errorConditionFormula>
    <errorMessage>Crop Stage is Production Complete and no further Harvest records can be created.</errorMessage>
</ValidationRule>