force-app/main/default/objects/DM_Production__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DM_Crop_Variety__c</columns>
    <columns>DM_Material__c</columns>
    <columns>DM_Planting_Date__c</columns>
    <columns>DM_Input__c</columns>
    <columns>DM_Application_Date__c</columns>
    <columns>DM_Production_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>