force-app/main/default/objects/DM_Production__c/listViews/DM_Cash_Crop.listView-meta.xml
<ListView>
    <fullName>DM_Cash_Crop</fullName>
    <columns>NAME</columns>
    <columns>DM_Material__c</columns>
    <columns>DM_Crop_Variety__c</columns>
    <columns>DM_Planting_Date__c</columns>
    <columns>DM_Planned_Harvest_Date__c</columns>
    <columns>DM_Crop_Stage__c</columns>
    <columns>DM_Field__c</columns>
    <columns>DM_Total_Area_Planted_Acres__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>DM_Production__c.DM_Cash_Crops</value>
    </filters>
    <label>Cash Crop</label>
</ListView>