force-app/main/default/objects/DM_Production__c/listViews/DM_Inputs_Applied.listView-meta.xml
<ListView>
    <fullName>DM_Inputs_Applied</fullName>
    <columns>NAME</columns>
    <columns>DM_Description__c</columns>
    <columns>DM_Input_Type__c</columns>
    <columns>DM_Application_Date__c</columns>
    <columns>DM_Reason_Applied__c</columns>
    <columns>DM_Field__c</columns>
    <columns>DM_Total_Area_Applied_Acres__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>DM_Production__c.DM_Inputs</value>
    </filters>
    <label>Inputs Applied</label>
</ListView>